--- a/config
+++ b/config
@@ -11,9 +11,10 @@
 
 set $mod Mod4
 
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:Cascadia Code 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -25,10 +26,13 @@ font pango:monospace 8
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xset r rate 185 100
+exec --no-startup-ia xrandr --output HDMI-2 --right-of DP-1 --rotate right
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
+exec --no-startup-id ibus-daemon --xim -d -r
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -39,10 +43,13 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
-set $up l
-set $down k
-set $left j
-set $right semicolon
+set $up k
+set $down j
+set $left h
+set $right l
+
+bindsym $mod+Shift+greater move container to output right
+bindsym $mod+Shift+less move container to output left
 
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -51,7 +58,7 @@ floating_modifier $mod
 bindsym $mod+Return exec kitty
 
 # start firefox
-bindsym $mod+Shift+f exec firefox-developer-edition
+bindsym $mod+Shift+x exec firefox-developer-edition
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -62,6 +69,8 @@ bindsym $mod+d exec dmenu_run
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+
+bindsym $mod+Mod1+l exec i3lock --color=000000
 
 # change focus
 bindsym $mod+$left focus left
@@ -88,7 +97,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+z split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -132,6 +141,10 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
+
+# next/prev workspace
+bindsym $mod+Shift+f workspace next
+bindsym $mod+Shift+b workspace prev
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
