--- a/config
+++ b/config
@@ -16,6 +16,9 @@ set $mod Mod4
 # is used in the bar {} block below.
 font pango:Cascadia Code 9
 
+default_border none
+
+
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
